# eirgrid

./: .gitignore  Cargo.toml  LICENSE.md  README.md  best_simulation_20250118_160338.csv  build.rs  location_analysis.txt  simulation_output.txt
aiSimulator/: README.md  action_weights.rs  actions.rs  analysis.rs  const_funcs.rs  csv_export.rs  generator.rs  iteration.rs  lib.rs  main.rs  metrics.rs  metrics_calculation.rs  multi_simulation.rs  power_storage.rs  reporting.rs  settlement.rs  settlements_loader.rs  simulation.rs  traits.rs
aiSimulator/assets/: coastline_points.json
aiSimulator/src/: lib.rs  main.rs  main.rs.original
cache/: location_analysis.json
checkpoints/20240214_112601/: latest_weights.json
mapData/: README.md
mapScraper/: .env  Population.csv  README.md  analyze_missing_settlements.py  filter_generators_in_ireland.py  ireland_bounds.py  missing_settlements_analysis.json  requirements.txt  settlements.py  terminalOut.txt  transform_settlements.py  unmatched_settlements.json
renderer/: README.md  data-loader.js  grid-coordinates.js  index.html  main.js  package.json  timeline.js  visualization.js
src/: README.md  action_weights.rs  carbon_offset.rs  const_funcs.rs  constants.rs  csv_export.rs  generator.rs  generators_loader.rs  ireland_generators.csv  lib.rs  location_analysis.rs  logging.rs  main.rs  map_handler.rs  metal_location_search.metal  metal_location_search.rs  poi.rs  power_storage.rs  settlement.rs  settlements.json  settlements_loader.rs  simulation_config.rs  spatial_index.rs  temp.md
src/renderer/: README.md  charts.js  (+11 more)
(+113 files in other folders)
