[package]
name = "eirgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
rayon = "1.8"
csv = "1.2"
lazy_static = "1.4"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
num_cpus = "1.16.0"

[[bin]]
name = "eirgrid"
path = "src/main.rs"
