[package]
name = "eirgrid"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "eirgrid"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
rayon = "1.7"
csv = "1.2"
lazy_static = "1.4"
clap = { version = "4.4", features = ["derive"] }
parking_lot = "0.12"
metal = { version = "0.31.0", optional = true }
indicatif = "0.17"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-timing = { version = "0.6", features = ["layer"] }

[build-dependencies]
fs_extra = "1.3"
metal = { version = "0.31.0", optional = true }

[[bin]]
name = "eirgrid"
path = "src/main.rs"

[features]
default = ["cpu"]
metal = ["dep:metal", "cpu"]
cpu = []
